Working towards 1.20.2-v3: Improve performance of map image loading
Signed-off-by: Irmo van den Berge <irmo.vandenberge@ziggo.nl>